docs: README 全面优化（参考 Hermes 风格：banner+badges+特性表格+Quick Install）